<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rhino.viewpager.view.AutoScrollViewPager
                    android:id="@+id/view_pager1"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <com.rhino.viewpager.view.CircleIndicator
                    android:id="@+id/circle_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="140dp"
                    android:clickable="false"
                    app:ci_count="5"
                    android:visibility="invisible"
                    app:ci_margin="8dp"
                    app:ci_mode="outside"
                    app:ci_normalColor="#444444"
                    app:ci_orientation="horizontal"
                    app:ci_radius="5dp"
                    app:ci_selectedColor="#ffe6454a" />

            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/AccordionTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:visibility="gone"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/AccordionTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/BackgroundToForegroundTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:visibility="gone"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/BackgroundToForegroundTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/CubeInTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:visibility="gone"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/CubeInTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/CubeOutTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/CubeOutTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/DefaultTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/DefaultTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/DepthPageTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/DepthPageTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/FlipHorizontalTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/FlipHorizontalTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/FlipVerticalTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/FlipVerticalTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/ForegroundToBackgroundTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/ForegroundToBackgroundTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/RotateDownTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/RotateDownTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/RotateUpTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/RotateUpTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/StackTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/StackTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/TabletTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/TabletTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/ZoomInTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/ZoomInTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/ZoomOutSlideTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/AccordionTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />

                    <Button
                        android:id="@+id/ZoomOutTransformer"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_rect_nor_sol_black50_pre_sol_black_sel_sol_black_cor50"
                        android:text="@string/ZoomOutTransformer"
                        android:textColor="@color/color_nor_33333_sel_ffffff" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</layout>